css/override.css
hr {
  margin-top: 30px;
  margin-bottom: 20px;
}

/* Post navigation links */
.post_navi {
  display: flex;
}

.post_navi-label {
  font-size: 0.8em;
  opacity: 0.5;
}

.post_navi .post_navi-item {
  padding: 0 2.2em;
  width: 50%;
  position: relative;
  color: inherit !important;
}

.post_navi .nav_prev {
  text-align: left;
}

.post_navi .nav_next {
  text-align: right;
}

.post_navi .nav_prev .post_navi-arrow {
  left: 0;
}

.post_navi .nav_next .post_navi-arrow {
  right: 0;
}

.post_navi .post_navi-arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  font-size: 2.5em;
  opacity: 0.3;
}

#share-buttons > div {
  width: 50px;
}

